@@ -66,18 +66,27 @@ end
 
 (** Imperative Directed Graphs. *)
 module Digraph : sig 
-  include S   
 
-  (** Imperative Unlabeled, bidirectional graph. 
+  include S   
+    
+  (** {2 Bidirectional graphs}
 
       Bidirectional graphs use more memory space (at worse the double) that
       standard concrete directional graphs. But accessing predecessors is in
       O(1) amortized instead of O(max(|V|,|E|)) and removing a vertex is in
       O(D*ln(D)) instead of O(|V|*ln(D)). D is the maximal degree of the
       graph. *)
+
+  (** Imperative Unlabeled, bidirectional graph. *)
   module ConcreteBidirectional (V: COMPARABLE) : 
     Sig.I with type V.t = V.t and type V.label = V.t and type E.t = V.t * V.t 
           and type E.label = unit
+
+  (** Imperative Labeled and bidirectional graph. *)
+  module ConcreteBidirectionalLabeled(V:COMPARABLE)(E:ORDERED_TYPE_DFT) :
+    Sig.I with type V.t = V.t and type V.label = V.t
+          and type E.t = V.t * E.t * V.t and type E.label = E.t
+
 end
 
 (** Imperative Undirected Graphs. *)
